added list of stuff for website

--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 <body>
 
   <!-- Add your site or application content here -->
+  <h1> Agile Is Anarchy</h1>
+  <ul>
+	  <li> Resume</li>
+	  <li> Workshops</li>
+	  <li> Articles</li>
+	  <li> Sponsorship</li>
+  </ul>
+
   <p>Hello world! This is HTML5 Boilerplate.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
